--- a/package.json
+++ b/package.json
@@ -10,17 +10,16 @@
     "dev:full": "concurrently \"npm run dev\" \"npm run client\""
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "pg": "^8.14.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "body-parser": "^1.20.2"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "concurrently": "^8.2.2"
   },
   "engines": {
     "node": ">=14.0.0"
   }
-}
+} 
